--- a/app/src/main/res/layout/activity_offline_survay.xml
+++ b/app/src/main/res/layout/activity_offline_survay.xml
@@ -166,6 +166,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
+                        android:maxLength="32"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
                         android:inputType="text"
@@ -225,6 +226,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
+                        android:maxLength="32"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
                         android:inputType="text"
@@ -299,6 +301,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
+                        android:maxLength="255"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
                         android:inputType="text"
@@ -308,6 +311,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
+                        android:maxLength="16"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
                         android:inputType="phone"
@@ -438,6 +442,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
+                        android:maxLength="100"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
                         android:inputType="text"
@@ -530,7 +535,6 @@
                         android:layout_weight="2.5"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
-                        android:clickable="true"
                         android:editable="false"
                         android:ems="10"
                         android:focusable="false"
@@ -569,7 +573,6 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:background="@drawable/editback"
-                            android:clickable="true"
                             android:editable="false"
                             android:ems="10"
                             android:focusable="false"
@@ -605,7 +608,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
-                        android:clickable="true"
                         android:editable="false"
                         android:ems="10"
                         android:focusable="false"
@@ -644,7 +646,6 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:background="@drawable/editback"
-                            android:clickable="true"
                             android:editable="false"
                             android:ems="10"
                             android:focusable="false"
@@ -675,6 +676,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
+                        android:maxLength="10"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
                         android:inputType="number"
@@ -684,6 +686,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:ems="10"
+                        android:maxLength="255"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
                         android:inputType="textMultiLine"
@@ -696,12 +699,14 @@
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
                         android:inputType="number"
+                        android:maxLength="10"
                         android:hint="عدد الطابعات "  />
                     <EditText
                         android:id="@+id/edt_printers_notes"
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:ems="10"
+                        android:maxLength="255"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
                         android:inputType="textMultiLine"
@@ -711,6 +716,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
+                        android:maxLength="10"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
                         android:inputType="number"
@@ -720,6 +726,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:ems="10"
+                        android:maxLength="255"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
                         android:inputType="textMultiLine"
