--- a/app/src/main/res/layout/activity_view_sketch_image.xml
+++ b/app/src/main/res/layout/activity_view_sketch_image.xml
@@ -34,7 +34,7 @@
 
         <!-- TODO: Update blank fragment layout -->
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
@@ -51,16 +51,29 @@
             android:layout_width="239dp"
             android:layout_height="225dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="112dp"
+            android:layout_marginBottom="180dp"
             android:src="@drawable/blueprint"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.503"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btn_delete_photo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="80dp"
+            android:background="#660914"
+            android:onClick="deleteImage"
+            android:text="مسح الصورة"
+            android:textColor="#fff"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/ivPicImage"
+            app:layout_constraintStart_toStartOf="@+id/ivPicImage" />
+
 
     </android.support.constraint.ConstraintLayout>
     <Button
