--- a/app/src/main/res/layout/activity_offline_survay.xml
+++ b/app/src/main/res/layout/activity_offline_survay.xml
@@ -527,19 +527,26 @@
                         android:background="@drawable/corner_gray"
                         android:textColor="@color/colorPrimary"
                         android:layout_marginEnd="8dp"/>
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/text_error3view"
+                        android:layout_marginTop="10dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="2.5"
+                        android:layout_height="wrap_content"
+                        app:errorEnabled="true"
+                        app:hintEnabled="false">
 
                     <EditText
                         android:id="@+id/edt_morning_shift_from"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="2.5"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
                         android:editable="false"
                         android:ems="10"
-                        android:focusable="false"
                         android:hint="بداية وقت الدوام الصباحي  "
-                        android:inputType="number" />
+                        android:inputType="none" />
+                    </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/linearLayout4"
@@ -576,9 +583,8 @@
                             android:editable="false"
                             android:ems="10"
                             android:focusable="false"
-
                             android:hint="نهاية وقت العمل الصباحي"
-                            android:inputType="text" />
+                            android:inputType="none" />
                     </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
 
@@ -600,11 +606,18 @@
                         android:background="@drawable/corner_gray"
                         android:textColor="@color/colorPrimary"
                         android:layout_marginEnd="8dp"/>
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/text_error4view"
+                        android:layout_marginTop="10dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="2.5"
+                        android:layout_height="wrap_content"
+                        app:errorEnabled="true"
+                        app:hintEnabled="false">
 
                     <EditText
                         android:id="@+id/edt_evening_shift_from"
-                        android:layout_width="0dp"
-                        android:layout_weight="2.5"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:background="@drawable/editback"
@@ -612,7 +625,8 @@
                         android:ems="10"
                         android:focusable="false"
                         android:hint="بداية وقت الدوام المسائي  "
-                        android:inputType="text" />
+                        android:inputType="none" />
+                    </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/linearLayout6"
@@ -650,7 +664,7 @@
                             android:ems="10"
                             android:focusable="false"
                             android:hint="نهاية وقت الدوام المسائي  "
-                            android:inputType="text" />
+                            android:inputType="none" />
                     </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
 
