--- a/app/src/main/res/layout/spinneritem.xml
+++ b/app/src/main/res/layout/spinneritem.xml
@@ -13,10 +13,15 @@
 
     <TextView
         android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
+        style="?android:attr/spinnerItemStyle"
+        android:singleLine="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:ellipsize="marquee"
+        android:textSize="18sp"
+        android:textColor="#808080"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="TextView" />
+        android:text="اختر" />
 </LinearLayout>
