--- a/app/src/main/res/layout/activity_view_sketch_image.xml
+++ b/app/src/main/res/layout/activity_view_sketch_image.xml
@@ -51,19 +51,22 @@
             android:layout_width="239dp"
             android:layout_height="225dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="180dp"
+            android:layout_marginBottom="88dp"
             android:src="@drawable/blueprint"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.503"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintHorizontal_bias="0.604"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
         <Button
             android:id="@+id/btn_delete_photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="80dp"
             android:background="#660914"
             android:onClick="deleteImage"
@@ -72,7 +75,8 @@
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/ivPicImage"
-            app:layout_constraintStart_toStartOf="@+id/ivPicImage" />
+            app:layout_constraintStart_toStartOf="@+id/ivPicImage"
+            app:layout_constraintTop_toBottomOf="@+id/ivPicImage" />
 
 
     </android.support.constraint.ConstraintLayout>
